ola-parser/src/testdata/syntaxTests/imports/name_clash_in_import_contract_struct_1.sol
==== Source: a ====
contract A {}
==== Source: b ====
import "a";
struct A { u256 a; }
// ----
// DeclarationError 2333: (b:12-35): Identifier already declared.
